%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1101 &-8751806291481248439
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ToChase
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -8618099180476477143}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-8618099180476477143
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Chase
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 7119950792135437465}
  m_StateMachineBehaviours:
  - {fileID: -2319194920756741464}
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!114 &-7574730797544128435
MonoBehaviour:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_GameObject: {fileID: 0}
  m_Enabled: 1
  m_EditorHideFlags: 0
  m_Script: {fileID: 11500000, guid: 5aaae59b161bb504a993c914a79ed574, type: 3}
  m_Name: 
  m_EditorClassIdentifier: 
  minSpeed: 8
  maxSpeed: 10
  perceptionRadius: 2.5
  avoidanceRadius: 2
  maxSteerForce: 8
  alignWeight: 2
  cohesionWeight: 2
  seperateWeight: 3
  targetWeight: 2
  detectionRange: 50
  fleeCooldown: 2
  obstacleMask:
    serializedVersion: 2
    m_Bits: 3840
  boundsRadius: 0.27
  avoidCollisionWeight: 10
  collisionAvoidDst: 5
  position: {x: 0, y: 0, z: 0}
  forward: {x: 0, y: 0, z: 0}
  acceleration: {x: 0, y: 0, z: 0}
  avgFlockHeading: {x: 0, y: 0, z: 0}
  avgAvoidanceHeading: {x: 0, y: 0, z: 0}
  centreOfFlockmates: {x: 0, y: 0, z: 0}
  numPerceivedFlockmates: 0
--- !u!114 &-2319194920756741464
MonoBehaviour:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_GameObject: {fileID: 0}
  m_Enabled: 1
  m_EditorHideFlags: 0
  m_Script: {fileID: 11500000, guid: 8d590dd94a19df7408c94c172807dc25, type: 3}
  m_Name: 
  m_EditorClassIdentifier: 
  minSpeed: 8
  maxSpeed: 10
  perceptionRadius: 2.5
  avoidanceRadius: 2
  maxSteerForce: 8
  alignWeight: 2
  cohesionWeight: 2
  seperateWeight: 3
  targetWeight: 4
  detectionRange: 50
  chaseCooldown: 5
  obstacleMask:
    serializedVersion: 2
    m_Bits: 3840
  boundsRadius: 0.27
  avoidCollisionWeight: 10
  collisionAvoidDst: 30
  position: {x: 0, y: 0, z: 0}
  forward: {x: 0, y: 0, z: 0}
  acceleration: {x: 0, y: 0, z: 0}
  avgFlockHeading: {x: 0, y: 0, z: 0}
  avgAvoidanceHeading: {x: 0, y: 0, z: 0}
  centreOfFlockmates: {x: 0, y: 0, z: 0}
  numPerceivedFlockmates: 0
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BoidFSM
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: ToChase
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: ToFlee
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 4338726840157069149}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &370219444774128247
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Flocking
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -8751806291481248439}
  m_StateMachineBehaviours:
  - {fileID: 7999656694477086402}
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &3733141584349202407
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Flee
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 7158375205253110745}
  m_StateMachineBehaviours:
  - {fileID: -7574730797544128435}
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &4338726840157069149
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 370219444774128247}
    m_Position: {x: 290, y: 40, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -8618099180476477143}
    m_Position: {x: 280, y: 220, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 3733141584349202407}
    m_Position: {x: 540, y: 120, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 370219444774128247}
--- !u!1101 &7119950792135437465
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ToFlee
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 3733141584349202407}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &7158375205253110745
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: ToFlee
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 370219444774128247}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!114 &7999656694477086402
MonoBehaviour:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_GameObject: {fileID: 0}
  m_Enabled: 1
  m_EditorHideFlags: 0
  m_Script: {fileID: 11500000, guid: d6a749b5b60210b47aaeaaebcc726795, type: 3}
  m_Name: 
  m_EditorClassIdentifier: 
  minSpeed: 10
  maxSpeed: 20
  perceptionRadius: 2.5
  avoidanceRadius: 2
  maxSteerForce: 8
  alignWeight: 5
  cohesionWeight: 5
  seperateWeight: 3
  detectionRange: 50
  obstacleMask:
    serializedVersion: 2
    m_Bits: 3840
  boundsRadius: 0.27
  avoidCollisionWeight: 10
  collisionAvoidDst: 30
  position: {x: 0, y: 0, z: 0}
  forward: {x: 0, y: 0, z: 0}
  acceleration: {x: 0, y: 0, z: 0}
  avgFlockHeading: {x: 0, y: 0, z: 0}
  avgAvoidanceHeading: {x: 0, y: 0, z: 0}
  centreOfFlockmates: {x: 0, y: 0, z: 0}
  numPerceivedFlockmates: 0
